# gischat

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yaml  entrypoint.sh  instances.json  log_config.yaml  pyproject.toml  sonar-project.properties
.github/: dependabot.yml  labeler.yml  release.yml
.github/workflows/: docker.yml  lint.yml  security.yml  tests.yml
db/: init.sql
gischat/: __init__.py  app.py  constants.py  db.py  dispatchers.py  env.py  logging.py  models.py  utils.py  ws_html.py
gischat/templates/: qchat.html  qmatrixchat.html  qtelegramchat.html  ws-page.html
qchat_api/: app.py  db.py  models.py  utils.py  ws_html.py
templates/: ws-page.html
tests/: __init__.py  conftest.py  test_api.py  test_bbox.py  test_crs.py  test_geojson.py  test_graphic_model.py  test_images.py  test_like.py  test_position.py  test_pyscript.py  test_utils.py  test_websocket.py
tests/data/: points.geojson  tissot.geojson
