[tool.poetry]
name = "gischat"
version = "3.0.0"
description = "QChat backend for QGIS and QField plugins"
authors = ["Guilhem Allaman <contact@guilhemallaman.net>"]
readme = "README.md"
packages = [{include = "gischat"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.120.3"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
colorlog = "^6.10.1"
websockets = "^15.0.1"
pydantic = "^2.12.3"
toml = "^0.10.2"
jinja2 = "^3.1.6"
sentry-sdk = {extras = ["fastapi"], version = "^2.43.0"}
pillow = "^12.0.0"
httpx = "^0.28.1"
redis = "^7.0.1"
asyncio = "^4.0.0"
matrix-nio = "^0.25.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
pytest-cov = "^7.0.0"
pytest-timeout = "^2.4.0"
codecov = "^2.1.13"
black = "^25.9.0"
isort = "^7.0.0"
flake8 = "^7.3.0"

[tool.pytest]
addopts = "--junitxml=junit/test-results.xml --cov=gischat --cov-report=html --cov-report=term --cov-report=xml"
asyncio_mode = "auto"
junit_family = "xunit2"
python_files = "test_*.py"
testpaths = "tests"

[tool.pytest.ini_options]
timeout = 5

[tool.coverage.run]
branch = true

[tool.coverage.report]
include = ["gischat/*.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
