[project]
name = "gischat"
version = "3.0.0"
description = "QChat backend for QGIS and QField plugins"
authors = [{ name = "Guilhem Allaman", email = "contact@guilhemallaman.net" }]
requires-python = ">=3.11,<4"
readme = "README.md"
dependencies = [
    "fastapi>=0.128.0,<1",
    "uvicorn[standard]>=0.40.0,<1",
    "colorlog>=6.10.1,<7",
    "websockets>=16.0,<17",
    "pydantic>=2.12.5,<3",
    "toml>=0.10.2,<0.11",
    "jinja2>=3.1.6,<4",
    "sentry-sdk[fastapi]>=2.51.0,<3",
    "pillow>=12.1.0,<13",
    "httpx>=0.28.1,<0.29",
    "redis>=7.1.0,<8",
    "asyncio>=4.0.0,<5",
    "matrix-nio>=0.25.2,<0.26",
    "markdown>=3.10.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1,<5",
    "pytest>=9.0.2,<10",
    "pytest-asyncio>=1.3.0,<2",
    "pytest-cov>=7.0.0,<8",
    "pytest-timeout>=2.4.0,<3",
    "codecov>=2.1.13,<3",
    "black>=26.1.0,<27",
    "isort>=7.0.0,<8",
    "flake8>=7.3.0,<8",
]

[tool.hatch.build.targets.sdist]
include = ["gischat"]

[tool.hatch.build.targets.wheel]
include = ["gischat"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest]
addopts = [
    "--junitxml=junit/test-results.xml",
    "--cov=gischat",
    "--cov-report=html",
    "--cov-report=term",
    "--cov-report=xml",
]
asyncio_mode = "auto"
junit_family = "xunit2"
python_files = ["test_*.py"]
testpaths = ["tests"]
timeout = "5"

[tool.coverage.run]
branch = true

[tool.coverage.report]
include = ["gischat/*.py"]
